--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -1,3 +1,4 @@
+
 #
 # https://github.com/P3TERX/Actions-OpenWrt
 #
@@ -66,6 +67,9 @@ jobs:
         chmod +x $DIY_P1_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P1_SH
+
+    - name: Git clone rkp-ipid
+      run: cd openwrt && git clone https://github.com/EOYOHOO/rkp-ipid.git package/rkp-ipid
 
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
